logs/grinder-to-graphite.log
Listing '.'...
Listing './bin'...
Compiling './bin/mtfu_read_random_example.py'...
***   File "./bin/mtfu_read_random_example.py", line 7
    print "usage: mtfu_read_random_example.py <data file> <# of lines to read>"
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mtfu_read_sequential_multithread_example.py'...
***   File "./bin/mtfu_read_sequential_multithread_example.py", line 14
    print "Starting thread %s, reading %d times" % (self.getName(), self.iterations)
                                               ^
SyntaxError: invalid syntax

Compiling './bin/mtfu_read_sequential_singlethread_example.py'...
***   File "./bin/mtfu_read_sequential_singlethread_example.py", line 8
    print "usage: mtfu_read_sequential_multithread_example.py <data file> <# of lines to read> <# threads>"
                                                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mtfu_reverse_seek_example.py'...
***   File "./bin/mtfu_reverse_seek_example.py", line 7
    print "usage: reverse_seek.py <data file> <search target>"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mtfu_tail_example.py'...
***   File "./bin/mtfu_tail_example.py", line 7
    print "usage: tail.py <data file> <# of lines to read>"
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/g2g'...
Listing './lib/python3.5/site-packages/g2g/aggregator'...
Listing './lib/python3.5/site-packages/g2g/logtype'...
Listing './lib/python3.5/site-packages/g2g/logtype/grinder'...
Listing './lib/python3.5/site-packages/grinder_to_graphite-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/mtFileUtil-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/mtfileutil'...
Compiling './lib/python3.5/site-packages/mtfileutil/reader.py'...
***   File "./lib/python3.5/site-packages/mtfileutil/reader.py", line 51
    print "FATAL: not a file: '" + dataFile + "'.  Aborting."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mtfileutil/reduce.py'...
***   File "./lib/python3.5/site-packages/mtfileutil/reduce.py", line 39
    print "Writing every %d lines of %s to %s" %(interval, source_file, dest_file)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mtfileutil/reverse.py'...
***   File "./lib/python3.5/site-packages/mtfileutil/reverse.py", line 78
    print "FATAL: not a file: '" + filename + "'.  No action performed."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygtail'...
Listing './lib/python3.5/site-packages/pygtail-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
